--- a/index.html
+++ b/index.html
@@ -1,17 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/main.js"></script>
+<header class="header">
+    <div class="container">
+        <header class="header__top">
+            <a class="logo" href="#">
+                <img class="logo__img" src="images/logo.svg" alt="logo">
+            </a>
+            <a class="phone" href="tel:+380505556677">+38 (050) 555 66 77</a>
+        </header>
+        <div class="header__content">
+            <h1 class="header__title">
+                авто из сша “под ключ”
+            </h1>
+            <h2 class="header__subtitle">
+                ЗАКАЖИ СЕБЕ АВТО ИЗ США С ВЫГОДОЙ ДО 40%
+            </h2>
+            <p class="header__text">
+                Подбор, покупка, доставка, растаможка, ремонт, оформление по договору
+            </p>
+            <a class="button" href="#">КОНСУЛЬТАЦИЯ ЭКСПЕРТА</a>
+            <div class="header__social">
+                <a class="header__social-link" href="#">
+                    <img class="header__social-img" src="images/icon/instagram.svg" alt="instagram icon">
+                </a>
+                <a class="header__social-link" href="#">
+                    <img class="header__social-img" src="images/icon/telegram.svg" alt="telegram icon">
+                </a>
+                <a class="header__social-link" href="#">
+                    <img class="header__social-img" src="images/icon/whatsapp.svg" alt="whatsapp icon">
+                </a>
+                <a class="header__social-link" href="#">
+                    <img class="header__social-img" src="images/icon/facebook.svg" alt="facebook icon">
+                </a>
+            </div>
+            <img class="header__images" src="images/ford-mustang.png" alt="ford-mustang">
+        </div>
+    </div>
+</header>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
