--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
     </div>
 </section>
 
+<section class="benefits">
+    <div class="container">
+
+    </div>
+</section>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
