--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </li>
                 <li class="services__item">
                     <p class="services__item-title">Ремонт авто</p>
-                    <p class="services__item-text">Комплексный ремонт автомобиля на  СТО</p>
+                    <p class="services__item-text">Комплексный ремонт автомобиля на СТО</p>
                 </li>
                 <li class="services__item">
                     <p class="services__item-title">Сертификация</p>
@@ -122,7 +122,36 @@
 
 <section class="benefits">
     <div class="container">
-
+        <div class="benefits__inner">
+            <img class="benefits__images" src="images/car.png" alt="car">
+            <div class="benefits__content">
+                <h2 class="title benefits__title">ПОЧЕМУ МЫ?</h2>
+                <ul class="benefits__list-item">
+                    <li class="benefits__list-item">
+                        <p class="benefits__item-num">650</p>
+                        <p class="benefits__item-title">успешно доставленных авто</p>
+                        <p class="benefits__item-text">
+                            большой опыт пригона автомобилей из США под ключ, все клиенты
+                            остались довольны на 100%
+                        </p>
+                    </li>
+                    <li class="benefits__list-item">
+                        <p class="benefits__item-num">5</p>
+                        <p class="benefits__item-title">лет на рынке Украины</p>
+                        <p class="benefits__item-text">
+                            Работаем по всей территории Украины, работаем по договору с клиентами
+                        </p>
+                    </li>
+                    <li class="benefits__list-item">
+                        <p class="benefits__item-num">100%</p>
+                        <p class="benefits__item-title">доверия клиентов</p>
+                        <p class="benefits__item-text">
+                            Онлайн отчетность. Вы всегда в курсе статуса подбора вашего авто. Фото и видео отчет
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </section>
 
