benefits section styles

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             <img class="benefits__images" src="images/car.png" alt="car">
             <div class="benefits__content">
                 <h2 class="title benefits__title">ПОЧЕМУ МЫ?</h2>
-                <ul class="benefits__list-item">
-                    <li class="benefits__list-item">
+                <ul class="benefits__list">
+                    <li class="benefits__item">
                         <p class="benefits__item-num">650</p>
                         <p class="benefits__item-title">успешно доставленных авто</p>
                         <p class="benefits__item-text">
@@ -135,14 +135,14 @@
                             остались довольны на 100%
                         </p>
                     </li>
-                    <li class="benefits__list-item">
+                    <li class="benefits__item">
                         <p class="benefits__item-num">5</p>
                         <p class="benefits__item-title">лет на рынке Украины</p>
                         <p class="benefits__item-text">
                             Работаем по всей территории Украины, работаем по договору с клиентами
                         </p>
                     </li>
-                    <li class="benefits__list-item">
+                    <li class="benefits__item">
                         <p class="benefits__item-num">100%</p>
                         <p class="benefits__item-title">доверия клиентов</p>
                         <p class="benefits__item-text">
