carousel section property

--- a/index.html
+++ b/index.html
@@ -155,6 +155,74 @@
     </div>
 </section>
 
+<section class="carousel">
+    <div class="container">
+        <h2 class="title">
+            ПРИГНАННЫЕ НАМИ АВТО
+        </h2>
+        <div class="carousel__inner">
+
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">
+                    <h4 class="carousel__item-title">INFINITI QX50 2016г.</h4>
+                    <p class="carousel__item-text">Экономия 4500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/3.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">
+                    <h4 class="carousel__item-title">INFINITI QX50 2016г.</h4>
+                    <p class="carousel__item-text">Экономия 4500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/3.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">
+                    <h4 class="carousel__item-title">INFINITI QX50 2016г.</h4>
+                    <p class="carousel__item-text">Экономия 4500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
