contacts section styles

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <h2 class="title contacts__title">Оставить заявку</h2>
                 <input class="contacts__input" type="text" placeholder="Как Вас зовут?">
                 <input class="contacts__input" type="text" placeholder="Ваш номер телефона">
-                <button class="contacts__btn" type="submit">Отправить заявку</button>
+                <button class="contacts__btn button" type="submit">Отправить заявку</button>
             </form>
         </div>
     </div>
