--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
                 Подбор, покупка, доставка, растаможка, ремонт, оформление по договору
             </p>
             <a class="button" href="#">КОНСУЛЬТАЦИЯ ЭКСПЕРТА</a>
-            <div class="header__social">
-                <a class="header__social-link" href="#">
-                    <img class="header__social-img" src="images/icon/instagram.svg" alt="instagram icon">
+            <div class="social header__social">
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/instagram.svg" alt="instagram icon">
                 </a>
-                <a class="header__social-link" href="#">
-                    <img class="header__social-img" src="images/icon/telegram.svg" alt="telegram icon">
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/telegram.svg" alt="telegram icon">
                 </a>
-                <a class="header__social-link" href="#">
-                    <img class="header__social-img" src="images/icon/whatsapp.svg" alt="whatsapp icon">
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/whatsapp.svg" alt="whatsapp icon">
                 </a>
-                <a class="header__social-link" href="#">
-                    <img class="header__social-img" src="images/icon/facebook.svg" alt="facebook icon">
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/facebook.svg" alt="facebook icon">
                 </a>
             </div>
             <img class="header__images" src="images/ford-mustang.png" alt="ford-mustang">
@@ -224,7 +224,7 @@
 </section>
 
 <section class="contacts">
-    <div class="container">
+    <v class="container">
         <div class="contacts__inner">
             <div class="contacts__info">
                 <h2 class="title">
@@ -259,8 +259,7 @@
                 <input class="contacts__input" type="text" placeholder="Ваш номер телефона">
                 <button class="contacts__btn button" type="submit">Отправить заявку</button>
             </form>
-        </div>
-    </div>
+        </div
 </section>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
