--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 </section>
 
 <section class="contacts">
-    <v class="container">
+    <div class="container">
         <div class="contacts__inner">
             <div class="contacts__info">
                 <h2 class="title">
@@ -259,8 +259,36 @@
                 <input class="contacts__input" type="text" placeholder="Ваш номер телефона">
                 <button class="contacts__btn button" type="submit">Отправить заявку</button>
             </form>
-        </div
+        </div>
+    </div>
 </section>
+
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <a class="logo" href="#">
+                <img class="logo__img" src="images/logo.svg" alt="logo">
+            </a>
+            <div class="social header__social">
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/instagram.svg" alt="instagram icon">
+                </a>
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/telegram.svg" alt="telegram icon">
+                </a>
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/whatsapp.svg" alt="whatsapp icon">
+                </a>
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/facebook.svg" alt="facebook icon">
+                </a>
+            </div>
+            <p class="footer__copy">
+                Политика конфиденциальности
+            </p>
+        </div>
+    </div>
+</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
