--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <a class="logo" href="#">
                 <img class="logo__img" src="images/logo.svg" alt="logo">
             </a>
-            <div class="social header__social">
+            <div class="social">
                 <a class="social__link" href="#">
                     <img class="social__img" src="images/icon/instagram.svg" alt="instagram icon">
                 </a>
@@ -283,9 +283,9 @@
                     <img class="social__img" src="images/icon/facebook.svg" alt="facebook icon">
                 </a>
             </div>
-            <p class="footer__copy">
+            <a class="footer__copy" href="#">
                 Политика конфиденциальности
-            </p>
+            </a>
         </div>
     </div>
 </footer>
