--- a/index.html
+++ b/index.html
@@ -155,142 +155,140 @@
     </div>
 </section>
 
-<!--<section class="carousel">-->
-<!--    <div class="container">-->
-<!--        <h2 class="title">-->
-<!--            ПРИГНАННЫЕ НАМИ АВТО-->
-<!--        </h2>-->
-<!--        <div class="carousel__inner">-->
+<section class="carousel">
+    <div class="container">
+        <h2 class="title">
+            ПРИГНАННЫЕ НАМИ АВТО
+        </h2>
+        <div class="carousel__inner">
 
-<!--            <div class="carousel__item">-->
-<!--                <div class="carousel__item-box">-->
-<!--                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">-->
-<!--                    <h4 class="carousel__item-title">INFINITI QX50 2016г.</h4>-->
-<!--                    <p class="carousel__item-text">Экономия 4500$</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="carousel__item">-->
-<!--                <div class="carousel__item-box">-->
-<!--                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">-->
-<!--                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>-->
-<!--                    <p class="carousel__item-text">Экономия 5500$</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="carousel__item">-->
-<!--                <div class="carousel__item-box">-->
-<!--                    <img class="carousel__item-img" src="images/carousel/3.jpg" alt="">-->
-<!--                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>-->
-<!--                    <p class="carousel__item-text">Экономия 5500$</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="carousel__item">-->
-<!--                <div class="carousel__item-box">-->
-<!--                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">-->
-<!--                    <h4 class="carousel__item-title">INFINITI QX50 2016г.</h4>-->
-<!--                    <p class="carousel__item-text">Экономия 4500$</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="carousel__item">-->
-<!--                <div class="carousel__item-box">-->
-<!--                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">-->
-<!--                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>-->
-<!--                    <p class="carousel__item-text">Экономия 5500$</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="carousel__item">-->
-<!--                <div class="carousel__item-box">-->
-<!--                    <img class="carousel__item-img" src="images/carousel/3.jpg" alt="">-->
-<!--                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>-->
-<!--                    <p class="carousel__item-text">Экономия 5500$</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="carousel__item">-->
-<!--                <div class="carousel__item-box">-->
-<!--                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">-->
-<!--                    <h4 class="carousel__item-title">INFINITI QX50 2016г.</h4>-->
-<!--                    <p class="carousel__item-text">Экономия 4500$</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="carousel__item">-->
-<!--                <div class="carousel__item-box">-->
-<!--                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">-->
-<!--                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>-->
-<!--                    <p class="carousel__item-text">Экономия 5500$</p>-->
-<!--                </div>-->
-<!--            </div>-->
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">
+                    <h4 class="carousel__item-title">INFINITI QX50 2016г.</h4>
+                    <p class="carousel__item-text">Экономия 4500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/3.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">
+                    <h4 class="carousel__item-title">INFINITI QX50 2016г.</h4>
+                    <p class="carousel__item-text">Экономия 4500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/3.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">
+                    <h4 class="carousel__item-title">INFINITI QX50 2016г.</h4>
+                    <p class="carousel__item-text">Экономия 4500$</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018г.</h4>
+                    <p class="carousel__item-text">Экономия 5500$</p>
+                </div>
+            </div>
 
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
+        </div>
+    </div>
+</section>
 
-<!--<section class="contacts">-->
-<!--    <div class="container">-->
-<!--        <div class="contacts__inner">-->
-<!--            <div class="contacts__info">-->
-<!--                <h2 class="title">-->
-<!--                    КОНТАКТЫ-->
-<!--                </h2>-->
-<!--                <ul class="contacts__list">-->
-<!--                    <li class="contacts__item">-->
-<!--                        <p class="contacts__item-title">Адрес</p>-->
-<!--                        <p class="contacts__item-text">-->
-<!--                            Киев, Подол-->
-<!--                            ул. Константиновская, д.71-->
-<!--                        </p>-->
-<!--                    </li>-->
-<!--                    <li class="contacts__item">-->
-<!--                        <p class="contacts__item-title">Время работы</p>-->
-<!--                        <p class="contacts__item-text">-->
-<!--                            Пн-Сб: с 9:00 до 19:00,-->
-<!--                            Вс: выходной-->
-<!--                        </p>-->
-<!--                    </li>-->
-<!--                    <li class="contacts__item">-->
-<!--                        <p class="contacts__item-title">Телефон</p>-->
-<!--                        <p class="contacts__item-text">-->
-<!--                            +38 (050) 555 66 77-->
-<!--                        </p>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--            <form class="contacts__form">-->
-<!--                <h2 class="title contacts__title">Оставить заявку</h2>-->
-<!--                <input class="contacts__input" type="text" placeholder="Как Вас зовут?">-->
-<!--                <input class="contacts__input" type="text" placeholder="Ваш номер телефона">-->
-<!--                <button class="contacts__btn button" type="submit">Отправить заявку</button>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
+<section class="contacts">
+    <div class="container">
+        <div class="contacts__inner">
+            <div class="contacts__info">
+                <h2 class="title">
+                    КОНТАКТЫ
+                </h2>
+                <ul class="contacts__list">
+                    <li class="contacts__item">
+                        <p class="contacts__item-title">Адрес</p>
+                        <p class="contacts__item-text">
+                            Киев, Подол
+                            ул. Константиновская, д.71
+                        </p>
+                    </li>
+                    <li class="contacts__item">
+                        <p class="contacts__item-title">Время работы</p>
+                        <p class="contacts__item-text">
+                            Пн-Сб: с 9:00 до 19:00,
+                            Вс: выходной
+                        </p>
+                    </li>
+                    <li class="contacts__item">
+                        <p class="contacts__item-title">Телефон</p>
+                        <p class="contacts__item-text">
+                            +38 (050) 555 66 77
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <form class="contacts__form">
+                <h2 class="title contacts__title">Оставить заявку</h2>
+                <input class="contacts__input" type="text" placeholder="Как Вас зовут?">
+                <input class="contacts__input" type="text" placeholder="Ваш номер телефона">
+                <button class="contacts__btn button" type="submit">Отправить заявку</button>
+            </form>
+        </div>
+    </div>
+</section>
 
-<!--<footer class="footer">-->
-
-<!--    <div class="container">-->
-<!--        <div class="footer__inner">-->
-<!--            <a class="logo" href="#">-->
-<!--                <img class="logo__img" src="images/logo.svg" alt="logo">-->
-<!--            </a>-->
-<!--            <div class="social">-->
-<!--                <a class="social__link" href="#">-->
-<!--                    <img class="social__img" src="images/icon/instagram.svg" alt="instagram icon">-->
-<!--                </a>-->
-<!--                <a class="social__link" href="#">-->
-<!--                    <img class="social__img" src="images/icon/telegram.svg" alt="telegram icon">-->
-<!--                </a>-->
-<!--                <a class="social__link" href="#">-->
-<!--                    <img class="social__img" src="images/icon/whatsapp.svg" alt="whatsapp icon">-->
-<!--                </a>-->
-<!--                <a class="social__link" href="#">-->
-<!--                    <img class="social__img" src="images/icon/facebook.svg" alt="facebook icon">-->
-<!--                </a>-->
-<!--            </div>-->
-<!--            <a class="footer__copy" href="#">-->
-<!--                Политика конфиденциальности-->
-<!--            </a>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--</footer>-->
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <a class="logo" href="#">
+                <img class="logo__img" src="images/logo.svg" alt="logo">
+            </a>
+            <div class="social">
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/instagram.svg" alt="instagram icon">
+                </a>
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/telegram.svg" alt="telegram icon">
+                </a>
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/whatsapp.svg" alt="whatsapp icon">
+                </a>
+                <a class="social__link" href="#">
+                    <img class="social__img" src="images/icon/facebook.svg" alt="facebook icon">
+                </a>
+            </div>
+            <a class="footer__copy" href="#">
+                Политика конфиденциальности
+            </a>
+        </div>
+    </div>
+</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
