mobile version of footer

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <a class="logo" href="#">
                 <img class="logo__img" src="images/logo.svg" alt="logo">
             </a>
-            <div class="social">
+            <div class="social footer__social">
                 <a class="social__link" href="#">
                     <img class="social__img" src="images/icon/instagram.svg" alt="instagram icon">
                 </a>
